[package]
name = "billiards"
version = "0.1.0"
edition = "2021"

[dependencies]
optimization = "*"
bevy = { version = "0.14" }
bevy_prototype_lyon = "0.12"
bevy_egui = "0.28"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
bevy_screen_diagnostics = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
